syntax = "proto3";
package com.tim.common.protos;
import "common.proto";

option java_outer_classname = "Message";

// 上下行消息
message UpDownMessage {
  uint64 id = 1; // 服务端生成消息ID
  uint64 cid = 2; // 客户端消息ID
  string fromUid = 3; // 发送人ID
  string targetUid = 4; // 接收人ID
  string groupId = 5; //  群ID
  string converId = 6; // 会话id
  ConverType converType = 7; // 会话类型
  MessageContent content = 9; // 内容
}

// 心跳
message HeartBeat {
  uint64 id = 1; // 消息ID
  HeartBeatType heartBeatType = 2;
}

enum HeartBeatType {
  PING = 0;
  PONG = 1;
}

// 消息ACK
message MessageAck {
  uint64 id = 1; // 服务端生成消息ID
  uint64 cid = 2; // 对应收到的消息ID
  string targetUid = 3; // 接收人ID
  string converId = 4; // 会话id
  uint64 time = 5; // 发送时间
  Code code = 6; // 返回码
}
